--- a/src/main/resources/config.ini
+++ b/src/main/resources/config.ini
@@ -1,4 +1,4 @@
-[sortbenchmark]
+[SortBenchmark]
 version = 1.0.0 (sortbenchmark)
 
 [helper]
@@ -19,14 +19,15 @@ hits = true
 [benchmarkstringsorters]
 words = 1000
 runs = 1000
-mergesort = false
+mergesort = true
 timsort = false
-quicksort = true
+quicksort = false
+heapsort = true
 introsort = false
 insertionsort = false
 bubblesort = false
 quicksort3way = false
-quicksortDualPivot = false
+quicksortDualPivot = true
 randomsort = false
 
 [benchmarkdatesorters]
@@ -43,4 +44,3 @@ n = 100000
 [operationsbenchmark]
 nlargest = 10000000
 repetitions = 10
-
